force-app/main/default/objects/packageinsurance__dlm/fields/contact_number__c.field-meta.xml
<CustomField>
    <fullName>contact_number__c</fullName>
    <label>contact_number</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>contact_number</labelOverride>
        <masterLabel>contact_number</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>