force-app/main/default/objects/packageinsurance__dlm/fields/installment_type__c.field-meta.xml
<CustomField>
    <fullName>installment_type__c</fullName>
    <label>installment_type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>installment_type</labelOverride>
        <masterLabel>installment_type</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>