force-app/main/default/objects/packageinsurance__dlm/fields/insured_address__c.field-meta.xml
<CustomField>
    <fullName>insured_address__c</fullName>
    <label>insured_address</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>insured_address</labelOverride>
        <masterLabel>insured_address</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>