force-app/main/default/objects/packageinsurance__dlm/fields/insured_name__c.field-meta.xml
<CustomField>
    <fullName>insured_name__c</fullName>
    <label>insured_name</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>insured_name</labelOverride>
        <masterLabel>insured_name</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>