force-app/main/default/objects/packageinsurance__dlm/fields/person_to_charge__c.field-meta.xml
<CustomField>
    <fullName>person_to_charge__c</fullName>
    <label>person_to_charge</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>person_to_charge</labelOverride>
        <masterLabel>person_to_charge</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>