force-app/main/default/objects/packageinsurance__dlm/fields/policy_holder_address__c.field-meta.xml
<CustomField>
    <fullName>policy_holder_address__c</fullName>
    <label>policy_holder_address</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>policy_holder_address</labelOverride>
        <masterLabel>policy_holder_address</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>