force-app/main/default/objects/packageinsurance__dlm/fields/policy_holder_name__c.field-meta.xml
<CustomField>
    <fullName>policy_holder_name__c</fullName>
    <label>policy_holder_name</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>policy_holder_name</labelOverride>
        <masterLabel>policy_holder_name</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>