force-app/main/default/objects/packageinsurance__dlm/fields/policy_period_from__c.field-meta.xml
<CustomField>
    <fullName>policy_period_from__c</fullName>
    <label>policy_period_from</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>policy_period_from</labelOverride>
        <masterLabel>policy_period_from</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>