force-app/main/default/objects/packageinsurance__dlm/fields/policy_type__c.field-meta.xml
<CustomField>
    <fullName>policy_type__c</fullName>
    <label>policy_type</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>policy_type</labelOverride>
        <masterLabel>policy_type</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>