force-app/main/default/objects/packageinsurance__dlm/fields/ProcessTimestamp__c.field-meta.xml
<CustomField>
    <fullName>ProcessTimestamp__c</fullName>
    <label>Process Timestamp</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Process Timestamp</labelOverride>
        <masterLabel>Process Timestamp</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>