force-app/main/default/objects/packageinsurance__dlm/fields/producer_agency__c.field-meta.xml
<CustomField>
    <fullName>producer_agency__c</fullName>
    <label>producer_agency</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>producer_agency</labelOverride>
        <masterLabel>producer_agency</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>