force-app/main/default/objects/packageinsurance__dlm/fields/producer_code__c.field-meta.xml
<CustomField>
    <fullName>producer_code__c</fullName>
    <label>producer_code</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>producer_code</labelOverride>
        <masterLabel>producer_code</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>