force-app/main/default/objects/packageinsurance__dlm/fields/rel_1767084629473_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1767084629473_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>packageinsurance_SourceRecordId_map__rel</label>
    <referenceTo>ADL_package_insuran__dlm</referenceTo>
    <relationshipLabel>packageinsurance_SourceRecordId_map__rel</relationshipLabel>
    <relationshipName>rel_1767084629473_end</relationshipName>
    <type>Lookup</type>
</CustomField>