force-app/main/default/objects/packageinsurance__dlm/fields/section_iii_bi_risk_insured__c.field-meta.xml
<CustomField>
    <fullName>section_iii_bi_risk_insured__c</fullName>
    <label>section_iii_bi_risk_insured</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>section_iii_bi_risk_insured</labelOverride>
        <masterLabel>section_iii_bi_risk_insured</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>