force-app/main/default/objects/packageinsurance__dlm/fields/SourceRecordId__c.field-meta.xml
<CustomField>
    <fullName>SourceRecordId__c</fullName>
    <label>Source Record Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Source Record Id</labelOverride>
        <masterLabel>Source Record Id</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>