force-app/main/default/objects/packageinsurance__dlm/fields/sum_insured__c.field-meta.xml
<CustomField>
    <fullName>sum_insured__c</fullName>
    <label>sum_insured</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>sum_insured</labelOverride>
        <masterLabel>sum_insured</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>