force-app/main/default/objects/packageinsurance__dlm/fields/total_premium__c.field-meta.xml
<CustomField>
    <fullName>total_premium__c</fullName>
    <label>total_premium</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>total_premium</labelOverride>
        <masterLabel>total_premium</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>